test/disabled/neg/macro-keyword-object1.scala
package test6

object macro
