test/disabled/neg/macro-keyword-object1.check
macro-keyword-object1.scala:3: error: identifier expected but 'macro' found.
object macro
       ^
one error found
